# monday

./: .env.example  .gitignore  README.md  check_board.py  crestview_client_applications.csv  debug_ingest.py  discover_board.py  implementation_plan.md  main.py  pyproject.toml  smoke_test.py  task.md  walkthrough.md
docs/: Map Stakeholder Goals.md  ai-meta-process.md  plan.md  task.md
output/: results.json
src/: console_output.py  csv_loader.py  models.py  monday_client.py  pipeline.py  prompts.py
